src/ParLatteFun.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParLatteFun.y
-----------------------------------------------------------------------------


rule 42 is unused
rule 43 is unused
rule 44 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListInit                                (4)
	Init -> Type Ident '(' ListArg ')' Block           (5)
	Init -> Type Ident '=' Expr ';'                    (6)
	ListInit -> Init                                   (7)
	ListInit -> Init ListInit                          (8)
	Arg -> Type Ident                                  (9)
	Arg -> Type 'ref' Ident                            (10)
	ListArg ->                                         (11)
	ListArg -> Arg                                     (12)
	ListArg -> Arg ',' ListArg                         (13)
	Block -> '{' ListStmt '}'                          (14)
	ListStmt ->                                        (15)
	ListStmt -> Stmt ListStmt                          (16)
	Stmt -> ';'                                        (17)
	Stmt -> Block                                      (18)
	Stmt -> Type Ident ';'                             (19)
	Stmt -> Init                                       (20)
	Stmt -> Ident '=' Expr ';'                         (21)
	Stmt -> Ident '++' ';'                             (22)
	Stmt -> Ident '--' ';'                             (23)
	Stmt -> 'return' Expr ';'                          (24)
	Stmt -> 'return' ';'                               (25)
	Stmt -> 'if' '(' Expr ')' Block                    (26)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (27)
	Stmt -> 'while' '(' Expr ')' Block                 (28)
	Stmt -> Expr ';'                                   (29)
	Type -> 'int'                                      (30)
	Type -> 'string'                                   (31)
	Type -> 'bool'                                     (32)
	Type -> 'void'                                     (33)
	Type -> '[' '(' ListTArg ')' '->' Type ']'         (34)
	Type -> '[' Type ']'                               (35)
	Type -> 'auto'                                     (36)
	TArg -> Type                                       (37)
	TArg -> Type 'ref'                                 (38)
	ListTArg ->                                        (39)
	ListTArg -> TArg                                   (40)
	ListTArg -> TArg ',' ListTArg                      (41)
	ListType ->                                        (42)
	ListType -> Type                                   (43)
	ListType -> Type ',' ListType                      (44)
	Expr6 -> Ident                                     (45)
	Expr6 -> Integer                                   (46)
	Expr6 -> 'true'                                    (47)
	Expr6 -> 'false'                                   (48)
	Expr6 -> '<|' ListExpr '|>'                        (49)
	Expr6 -> Ident '(' ListExpr ')'                    (50)
	Expr6 -> '(' Expr ')' '(' ListExpr ')'             (51)
	Expr6 -> String                                    (52)
	Expr6 -> Expr6 '[' Expr ']'                        (53)
	Expr6 -> '(' Expr ')'                              (54)
	Expr5 -> '-' Expr6                                 (55)
	Expr5 -> '!' Expr6                                 (56)
	Expr5 -> Expr6                                     (57)
	Expr4 -> Expr4 MulOp Expr5                         (58)
	Expr4 -> Expr5                                     (59)
	Expr3 -> Expr3 AddOp Expr4                         (60)
	Expr3 -> Expr4                                     (61)
	Expr2 -> Expr2 RelOp Expr3                         (62)
	Expr2 -> Expr3                                     (63)
	Expr1 -> Expr2 '&&' Expr1                          (64)
	Expr1 -> Expr2                                     (65)
	Expr -> Expr1 '||' Expr                            (66)
	Expr -> 'lambda' '(' ListArg ')' '->' Type '.' Expr   (67)
	Expr -> 'λ' '(' ListArg ')' '->' Type '.' Expr     (68)
	Expr -> 'lambda' '(' ListArg ')' '->' Type Block   (69)
	Expr -> 'λ' '(' ListArg ')' '->' Type Block        (70)
	Expr -> Expr1                                      (71)
	ListExpr ->                                        (72)
	ListExpr -> Expr                                   (73)
	ListExpr -> Expr ',' ListExpr                      (74)
	AddOp -> '+'                                       (75)
	AddOp -> '-'                                       (76)
	MulOp -> '*'                                       (77)
	MulOp -> '/'                                       (78)
	MulOp -> '%'                                       (79)
	RelOp -> '<'                                       (80)
	RelOp -> '<='                                      (81)
	RelOp -> '>'                                       (82)
	RelOp -> '>='                                      (83)
	RelOp -> '=='                                      (84)
	RelOp -> '!='                                      (85)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'->'           { PT _ (TS _ 13) }
	'.'            { PT _ (TS _ 14) }
	'/'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'<|'           { PT _ (TS _ 19) }
	'='            { PT _ (TS _ 20) }
	'=='           { PT _ (TS _ 21) }
	'>'            { PT _ (TS _ 22) }
	'>='           { PT _ (TS _ 23) }
	'['            { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'auto'         { PT _ (TS _ 26) }
	'bool'         { PT _ (TS _ 27) }
	'else'         { PT _ (TS _ 28) }
	'false'        { PT _ (TS _ 29) }
	'if'           { PT _ (TS _ 30) }
	'int'          { PT _ (TS _ 31) }
	'lambda'       { PT _ (TS _ 32) }
	'ref'          { PT _ (TS _ 33) }
	'return'       { PT _ (TS _ 34) }
	'string'       { PT _ (TS _ 35) }
	'true'         { PT _ (TS _ 36) }
	'void'         { PT _ (TS _ 37) }
	'while'        { PT _ (TS _ 38) }
	'{'            { PT _ (TS _ 39) }
	'|>'           { PT _ (TS _ 40) }
	'||'           { PT _ (TS _ 41) }
	'}'            { PT _ (TS _ 42) }
	'λ'            { PT _ (TS _ 43) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Init            rules 5, 6
	ListInit        rules 7, 8
	Arg             rules 9, 10
	ListArg         rules 11, 12, 13
	Block           rule  14
	ListStmt        rules 15, 16
	Stmt            rules 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29
	Type            rules 30, 31, 32, 33, 34, 35, 36
	TArg            rules 37, 38
	ListTArg        rules 39, 40, 41
	ListType        rules 42, 43, 44
	Expr6           rules 45, 46, 47, 48, 49, 50, 51, 52, 53, 54
	Expr5           rules 55, 56, 57
	Expr4           rules 58, 59
	Expr3           rules 60, 61
	Expr2           rules 62, 63
	Expr1           rules 64, 65
	Expr            rules 66, 67, 68, 69, 70, 71
	ListExpr        rules 72, 73, 74
	AddOp           rules 75, 76
	MulOp           rules 77, 78, 79
	RelOp           rules 80, 81, 82, 83, 84, 85

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'['            shift, and enter state 7
	'auto'         shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12

	Program        goto state 3
	Init           goto state 4
	ListInit       goto state 5
	Type           goto state 6

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'|>'           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	ListInit -> Init .                                  (rule 7)
	ListInit -> Init . ListInit                         (rule 8)

	'['            shift, and enter state 7
	'auto'         shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	%eof           reduce using rule 7

	Init           goto state 4
	ListInit       goto state 16
	Type           goto state 6

State 5

	Program -> ListInit .                               (rule 4)

	%eof           reduce using rule 4


State 6

	Init -> Type . Ident '(' ListArg ')' Block          (rule 5)
	Init -> Type . Ident '=' Expr ';'                   (rule 6)

	L_Ident        shift, and enter state 2

	Ident          goto state 15

State 7

	Type -> '[' . '(' ListTArg ')' '->' Type ']'        (rule 34)
	Type -> '[' . Type ']'                              (rule 35)

	'('            shift, and enter state 14
	'['            shift, and enter state 7
	'auto'         shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12

	Type           goto state 13

State 8

	Type -> 'auto' .                                    (rule 36)

	')'            reduce using rule 36
	','            reduce using rule 36
	'.'            reduce using rule 36
	']'            reduce using rule 36
	'ref'          reduce using rule 36
	'{'            reduce using rule 36
	L_Ident        reduce using rule 36


State 9

	Type -> 'bool' .                                    (rule 32)

	')'            reduce using rule 32
	','            reduce using rule 32
	'.'            reduce using rule 32
	']'            reduce using rule 32
	'ref'          reduce using rule 32
	'{'            reduce using rule 32
	L_Ident        reduce using rule 32


State 10

	Type -> 'int' .                                     (rule 30)

	')'            reduce using rule 30
	','            reduce using rule 30
	'.'            reduce using rule 30
	']'            reduce using rule 30
	'ref'          reduce using rule 30
	'{'            reduce using rule 30
	L_Ident        reduce using rule 30


State 11

	Type -> 'string' .                                  (rule 31)

	')'            reduce using rule 31
	','            reduce using rule 31
	'.'            reduce using rule 31
	']'            reduce using rule 31
	'ref'          reduce using rule 31
	'{'            reduce using rule 31
	L_Ident        reduce using rule 31


State 12

	Type -> 'void' .                                    (rule 33)

	')'            reduce using rule 33
	','            reduce using rule 33
	'.'            reduce using rule 33
	']'            reduce using rule 33
	'ref'          reduce using rule 33
	'{'            reduce using rule 33
	L_Ident        reduce using rule 33


State 13

	Type -> '[' Type . ']'                              (rule 35)

	']'            shift, and enter state 22


State 14

	Type -> '[' '(' . ListTArg ')' '->' Type ']'        (rule 34)

	')'            reduce using rule 39
	'['            shift, and enter state 7
	'auto'         shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12

	Type           goto state 19
	TArg           goto state 20
	ListTArg       goto state 21

State 15

	Init -> Type Ident . '(' ListArg ')' Block          (rule 5)
	Init -> Type Ident . '=' Expr ';'                   (rule 6)

	'('            shift, and enter state 17
	'='            shift, and enter state 18


State 16

	ListInit -> Init ListInit .                         (rule 8)

	%eof           reduce using rule 8


State 17

	Init -> Type Ident '(' . ListArg ')' Block          (rule 5)

	')'            reduce using rule 11
	'['            shift, and enter state 7
	'auto'         shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12

	Arg            goto state 46
	ListArg        goto state 47
	Type           goto state 48

State 18

	Init -> Type Ident '=' . Expr ';'                   (rule 6)

	'!'            shift, and enter state 36
	'('            shift, and enter state 37
	'-'            shift, and enter state 38
	'<|'           shift, and enter state 39
	'false'        shift, and enter state 40
	'lambda'       shift, and enter state 41
	'true'         shift, and enter state 42
	'λ'            shift, and enter state 43
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 44
	L_quoted       shift, and enter state 45

	Ident          goto state 26
	Integer        goto state 27
	String         goto state 28
	Expr6          goto state 29
	Expr5          goto state 30
	Expr4          goto state 31
	Expr3          goto state 32
	Expr2          goto state 33
	Expr1          goto state 34
	Expr           goto state 35

State 19

	TArg -> Type .                                      (rule 37)
	TArg -> Type . 'ref'                                (rule 38)

	')'            reduce using rule 37
	','            reduce using rule 37
	'ref'          shift, and enter state 25


State 20

	ListTArg -> TArg .                                  (rule 40)
	ListTArg -> TArg . ',' ListTArg                     (rule 41)

	')'            reduce using rule 40
	','            shift, and enter state 24


State 21

	Type -> '[' '(' ListTArg . ')' '->' Type ']'        (rule 34)

	')'            shift, and enter state 23


State 22

	Type -> '[' Type ']' .                              (rule 35)

	')'            reduce using rule 35
	','            reduce using rule 35
	'.'            reduce using rule 35
	']'            reduce using rule 35
	'ref'          reduce using rule 35
	'{'            reduce using rule 35
	L_Ident        reduce using rule 35


State 23

	Type -> '[' '(' ListTArg ')' . '->' Type ']'        (rule 34)

	'->'           shift, and enter state 80


State 24

	ListTArg -> TArg ',' . ListTArg                     (rule 41)

	')'            reduce using rule 39
	'['            shift, and enter state 7
	'auto'         shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12

	Type           goto state 19
	TArg           goto state 20
	ListTArg       goto state 79

State 25

	TArg -> Type 'ref' .                                (rule 38)

	')'            reduce using rule 38
	','            reduce using rule 38


State 26

	Expr6 -> Ident .                                    (rule 45)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 50)
